deprecated/templates/infra.tf
###########################################################
# LAFORGE GENERATED TERRAFORM CONFIGURATION
# -- WARNING --
# This file is automatically generated. Do not edit it's
# contents directly. Use Laforge and re build this file.
###########################################################

# AWS Configuration
provider "aws" {
  access_key = "{{ .Competition.AWSCred.APIKey }}"
  secret_key = "{{ .Competition.AWSCred.APISecret }}"
  region = "{{ .Environment.AWSConfig.Region }}"
  profile = ""
}

# Key Pair
resource "aws_key_pair" "ssh_{{ .Environment.Name }}" {
  key_name = "ssh_{{ .Environment.Name }}"
  public_key = "{{ .Competition.SSHPublicKey | html }}"
}

{{ range $i, $_ := N .Environment.PodCount }}

{{ $id := printf "%s%d" $.Environment.Prefix $i }}

###########################################################
# BEGIN TEAM BLOCK
# team:{{ $id }}
###########################################################

# vpc:{{ $id }}
resource "aws_vpc" "{{ $id }}_vpc" {
  cidr_block = "{{ $.Environment.AWSConfig.CIDR }}"
  enable_dns_hostnames = true

  tags {
    Name = "{{ $id }}_vpc"
    Environment = "{{ $.Environment.Name }}"
    Team = "{{ $id }}"
  }
}

# igw:{{ $id }}
resource "aws_internet_gateway" "{{ $id }}_igw" {
  vpc_id = "${aws_vpc.{{ $id }}_vpc.id}"
}

# route_table:{{ $id }}
resource "aws_route_table" "{{ $id }}_default_gateway" {
  vpc_id = "${aws_vpc.{{ $id }}_vpc.id}"

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.{{ $id }}_igw.id}"
  }

  tags {
    Name = "{{ $id }}_igw_route"
    Environment = "{{ $.Environment.Name }}"
    Team = "{{ $id }}"
  }
}

# vdi_subnet:{{ $id }}
resource "aws_subnet" "{{ $id }}_vdi_subnet" {
  vpc_id     = "${aws_vpc.{{ $id }}_vpc.id}"
  cidr_block = "{{ $.Environment.JumpHosts.CIDR }}"
  map_public_ip_on_launch = true

  tags {
    Name = "{{ $id }}_vdi_subnet"
    Environment = "{{ $.Environment.Name }}"
    Team = "{{ $id }}"
  }
}

# vdi_route:{{ $id }}
resource "aws_route_table_association" "{{ $id }}_rt_assoc" {
  subnet_id      = "${aws_subnet.{{ $id }}_vdi_subnet.id}"
  route_table_id = "${aws_route_table.{{ $id }}_default_gateway.id}"
}

# r53:{{ $id }}
resource "aws_route53_zone" "{{ $id }}_r53" {
  vpc_id = "${aws_vpc.{{ $id }}_vpc.id}"
  name = "{{ $.Environment.Domain }}"  
  comment = "{{ $id }}_internal_zone"

  tags {
    Environment = "{{ $.Environment.Name }}"
    Team = "{{ $id }}"
  }
}

# dhcp:{{ $id }}
resource "aws_vpc_dhcp_options" "{{ $id }}_dhcp" {
  domain_name = "{{ $.Competition.DHCPConfig.DNSName }}"
  domain_name_servers = [
    {{ range $_, $nameserver := $.Competition.DHCPConfig.Nameservers }}
      "{{ $nameserver }}",
    {{ end }}
  ]
  ntp_servers = [
    {{ range $_, $ntpserver := $.Competition.DHCPConfig.NTPServers }}
      "{{ $ntpserver }}",
    {{ end }}
  ]  

  tags {
    Name = "{{ $id }}_dhcp"
    Environment = "{{ $.Environment.Name }}"
    Team = "{{ $id }}"
  }
}

# dhcp_assoc:{{ $id }}
resource "aws_vpc_dhcp_options_association" "{{ $id }}_dhcp_assoc" {
  vpc_id          = "${aws_vpc.{{ $id }}_vpc.id}"
  dhcp_options_id = "${aws_vpc_dhcp_options.{{ $id }}_dhcp.id}"
}

# sg_base:{{ $id }}
resource "aws_security_group" "{{ $id }}_base" {
  name = "{{ $id }}_base"
  description = "Laforge - {{ $id }}_base SG"
  vpc_id = "${aws_vpc.{{ $id }}_vpc.id}"

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = [
      {{ range $_, $AdminIP := $.Competition.AdminIPs }}
        "{{ $AdminIP }}",
      {{ end }}
    ]
  }

  ingress {
    from_port = 8
    to_port = 0
    protocol = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Name = "{{ $id }}_base"
    Environment = "{{ $.Environment.Name }}"
    Team = "{{ $id }}"
  }
}

# sg_vdi:{{ $id }}
resource "aws_security_group" "{{ $id }}_vdi" {
  name = "{{ $id }}_vdi"
  description = "Laforge - {{ $id }}_vdi SG"
  vpc_id = "${aws_vpc.{{ $id }}_vpc.id}"

  # ingress {
  #   from_port         = 22
  #   to_port           = 22
  #   protocol          = "tcp"
  #   cidr_blocks       = [
  #     {{ range $_, $whitelistIP := $.Environment.WhitelistIPs }}
  #     "{{ $whitelistIP }}",
  #     {{ end }}
  #   ]
  # }

  # ingress {
  #   from_port         = 3389
  #   to_port           = 3389
  #   protocol          = "tcp"
  #   cidr_blocks       = [
  #     {{ range $_, $whitelistIP := $.Environment.WhitelistIPs }}
  #     "{{ $whitelistIP }}",
  #     {{ end }}
  #   ]
  # }

  ingress {
    from_port         = 22
    to_port           = 22
    protocol          = "tcp"
    cidr_blocks       = [
      "0.0.0.0/0",
    ]
  }

  ingress {
    from_port         = 3389
    to_port           = 3389
    protocol          = "tcp"
    cidr_blocks       = [
      "0.0.0.0/0",
    ]
  }

  ingress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    security_groups = [
      "${aws_security_group.{{ $id }}_base.id}",
    ]
  }

  tags {
    Name = "{{ $id }}_vdi"
    Environment = "{{ $.Environment.Name }}"
    Team = "{{ $id }}"
  }
}

{{/* TODO: VDI Network Creation */}}

{{ range $wjh, $_ := N $.Environment.JumpHosts.Windows.Count }}

{{ $hostname := printf "windowsvdi0%d-%s" $wjh $id }}

{{ $fqdn := printf "%s.%s" $hostname $.Environment.Name }}

resource "aws_eip" "{{ $hostname }}_eip" {
  vpc = true
}

resource "aws_eip_association" "{{ $hostname }}_eip_assoc" {
  instance_id   = "${aws_instance.{{ $hostname }}.id}"
  allocation_id = "${aws_eip.{{ $hostname }}_eip.id}"
}

resource "aws_instance" "{{ $hostname }}" {

  ami = "{{ $.Environment.WindowsJumpAMI }}"
  instance_type = "{{ $.Environment.JumpHosts.Windows.Size }}"
  key_name = "${aws_key_pair.ssh_{{ $.Environment.Name }}.key_name}"
  subnet_id = "${aws_subnet.{{ $id }}_vdi_subnet.id}"
  ebs_optimized = true

  {{ $customIP := CustomIP $.Environment.JumpHosts.CIDR 20 $wjh }}

  {{ $scriptPath := ScriptRender "jump_windows_uds.xml" $.Competition $.Environment $i nil nil $hostname }}

  user_data = "${file("{{ $scriptPath }}")}"

  private_ip = "{{ $customIP }}"

  vpc_security_group_ids = [
    "${aws_security_group.{{ $id }}_base.id}",
    "${aws_security_group.{{ $id }}_vdi.id}",
  ]

  tags {
    Name = "{{ $hostname }}"
    Environment = "{{ $.Environment.Name }}"
    Network = "{{ $id }}-vdi"
    Team = "{{ $id }}"
  }

  {{ $scriptCount := len $.Environment.JumpHosts.Windows.Scripts }}
  {{ if gt $scriptCount 0 }}
    {{ range $_, $sname := $.Environment.JumpHosts.Windows.Scripts }}
      {{ $scriptPath := DScript $sname $.Competition $.Environment $i nil nil $hostname }}
      {{ if ne $scriptPath "SCRIPT_PARSING_ERROR" }}
        provisioner "file" {
          connection {
            type     = "winrm"
            user     = "Administrator"
            timeout  = "60m"
            password = "{{ $.Environment.PodPassword $.PodID }}"
          }

          source      = "{{ $scriptPath }}"
          destination = "C:/laforge/{{ $sname }}"
        }

        provisioner "remote-exec" {
          connection {
            type     = "winrm"
            user     = "Administrator"
            timeout  = "60m"
            password = "{{ $.Environment.PodPassword $.PodID }}"
          }

          inline = [
            "powershell -NoProfile -ExecutionPolicy Bypass C:/laforge/{{ $sname }}",
          ]
        }
      {{ end }}
    {{ end }}

    {{ if gt $scriptCount 0 }}
      provisioner "remote-exec" {
        connection {
          type     = "winrm"
          user     = "Administrator"
          timeout  = "60m"
          password = "{{ $.Environment.PodPassword $.PodID }}"
        }
        
        inline = [       
          "rmdir /s /q \"C:/laforge\" || ver1>nul",
        ]
      }
    {{ end }}
  {{ end }}

  depends_on = [
    "aws_instance.{{ $id }}_{{ $.Environment.GenesisHost.Network }}_{{ $.Environment.GenesisHost.Hostname }}",
  ]
}

resource "aws_route53_record" "{{ $id }}_vdi_ecname_{{ $hostname }}" {
  zone_id = "{{ $.Competition.R53ZoneID }}"
  name    = "{{ $fqdn }}"
  type    = "A"
  ttl     = "60"
  records = [
    "${aws_instance.{{ $hostname }}.public_ip}",
  ]
}

output "public_ips.{{ $hostname }}" {
  value = "${aws_instance.{{ $hostname }}.public_ip}"
}

{{ end }}

{{ range $wjh, $_ := N $.Environment.JumpHosts.Kali.Count }}

{{ $hostname := printf "kalivdi0%d-%s" $wjh $id }}

{{ $fqdn := printf "%s.%s" $hostname $.Environment.Name }}

resource "aws_eip" "{{ $hostname }}_eip" {
  vpc = true
}

resource "aws_eip_association" "{{ $hostname }}_eip_assoc" {
  instance_id   = "${aws_instance.{{ $hostname }}.id}"
  allocation_id = "${aws_eip.{{ $hostname }}_eip.id}"
}

resource "aws_instance" "{{ $hostname }}" {

  ami = "{{ $.Environment.KaliJumpAMI }}"
  instance_type = "{{ $.Environment.JumpHosts.Kali.Size }}"
  key_name = "${aws_key_pair.ssh_{{ $.Environment.Name }}.key_name}"
  subnet_id = "${aws_subnet.{{ $id }}_vdi_subnet.id}"
  ebs_optimized = true

  {{ $customIP := CustomIP $.Environment.JumpHosts.CIDR 30 $wjh }}

  {{ $scriptPath := ScriptRender "jump_ubuntu_uds.sh" $.Competition $.Environment $i nil nil $hostname }}

  user_data = "${file("{{ $scriptPath }}")}"

  private_ip = "{{ $customIP }}"

  vpc_security_group_ids = [
    "${aws_security_group.{{ $id }}_base.id}",
    "${aws_security_group.{{ $id }}_vdi.id}",
  ]

  tags {
    Name = "{{ $hostname }}"
    Environment = "{{ $.Environment.Name }}"
    Network = "{{ $id }}-vdi"
    Team = "{{ $id }}"
  }

  provisioner "remote-exec" {
    connection {
      type     = "ssh"  
      user     = "ec2-user"
      timeout  = "60m"
      private_key = "${file("{{ $.Competition.SSHPrivateKeyPath }}")}"
    }
    inline = [
      "curl -sL -o /tmp/userdata.sh 'http://169.254.169.254/latest/user-data'",
      "sudo bash /tmp/userdata.sh",
      "rm -f /tmp/userdata.sh",
    ]
  }

  {{ range $_, $sname := $.Environment.JumpHosts.Kali.Scripts }}
    {{ $scriptPath := DScript $sname $.Competition $.Environment $i nil nil $hostname }}
    provisioner "file" {
      connection {
        type     = "ssh"  
        user     = "root"
        timeout  = "60m"
        private_key = "${file("{{ $.Competition.SSHPrivateKeyPath }}")}"
      }
      source      = "{{ $scriptPath }}"
      destination = "/tmp/{{ $sname }}"
    }

    provisioner "remote-exec" {
      connection {
        type     = "ssh"  
        user     = "root"
        timeout  = "60m"
        private_key = "${file("{{ $.Competition.SSHPrivateKeyPath }}")}"
      }
      inline = [
        "chmod +x /tmp/{{ $sname }}",
        "/tmp/{{ $sname }}",
        "rm -f /tmp/{{ $sname }}",
      ]
    }
  {{ end }}

  depends_on = [
    "aws_instance.{{ $id }}_{{ $.Environment.GenesisHost.Network }}_{{ $.Environment.GenesisHost.Hostname }}",
  ]  
}

resource "aws_route53_record" "{{ $id }}_vdi_ecname_{{ $hostname }}" {
  zone_id = "{{ $.Competition.R53ZoneID }}"
  name    = "{{ $fqdn }}"
  type    = "A"
  ttl     = "60"
  records = [
    "${aws_instance.{{ $hostname }}.public_ip}",
  ]
}

output "public_ips.{{ $hostname }}" {
  value = "${aws_instance.{{ $hostname }}.public_ip}"
}

{{ end }}


{{ range $port, $securityGroup := $.Environment.ResolvePublicTCP }}

resource "aws_security_group" "{{ $id }}_public_sg_{{ $securityGroup.Protocol }}_{{ $port }}" {
  name = "{{ $id }}_public_sg_{{ $securityGroup.Protocol }}_{{ $port }}"
  description = "Laforge - {{ $id }}_public {{ $securityGroup.Protocol }}/{{ $port }} SG"
  vpc_id = "${aws_vpc.{{ $id }}_vpc.id}"

  ingress {
    from_port = {{ $securityGroup.FromPort }}
    to_port = {{ $securityGroup.ToPort }}
    protocol = "{{ $securityGroup.Protocol }}"
    security_groups = [
      "${aws_security_group.{{ $id }}_base.id}",
    ]
  }

  tags {
    Name = "{{ $id }}_public_sg_{{ $securityGroup.Protocol }}_{{ $port }}"
    Environment = "{{ $.Environment.Name }}"
    Team = "{{ $id }}"
  }
}

{{ end }}

{{ range $port, $securityGroup := $.Environment.ResolvePublicUDP }}

resource "aws_security_group" "{{ $id }}_public_sg_{{ $securityGroup.Protocol }}_{{ $port }}" {
  name = "{{ $id }}_public_sg_{{ $securityGroup.Protocol }}_{{ $port }}"
  description = "Laforge - {{ $id }}_public {{ $securityGroup.Protocol }}/{{ $port }} SG"
  vpc_id = "${aws_vpc.{{ $id }}_vpc.id}"

  ingress {
    from_port = {{ $securityGroup.FromPort }}
    to_port = {{ $securityGroup.ToPort }}
    protocol = "{{ $securityGroup.Protocol }}"
    security_groups = [
      "${aws_security_group.{{ $id }}_base.id}",
    ]
  }

  tags {
    Name = "{{ $id }}_public_sg_{{ $securityGroup.Protocol }}_{{ $port }}"
    Environment = "{{ $.Environment.Name }}"
    Team = "{{ $id }}"
  }
}


{{ end }}


{{ range $_, $network := $.Environment.ResolvedNetworks }}

# subnet:{{ $network.Name }}:{{ $id }}
resource "aws_subnet" "{{ $id }}_{{ $network.Name }}" {
  vpc_id     = "${aws_vpc.{{ $id }}_vpc.id}"
  cidr_block = "{{ $network.CIDR }}"
  map_public_ip_on_launch = true

  tags {
    Name = "{{ $id }}_{{ $network.Name }}"
    Environment = "{{ $.Environment.Name }}"
    Team = "{{ $id }}"
  }
}


# rt_assoc:{{ $network.Name }}:{{ $id }}
resource "aws_route_table_association" "{{ $id }}_{{ $network.Name }}_rt_assoc" {
  subnet_id      = "${aws_subnet.{{ $id }}_{{ $network.Name }}.id}"
  route_table_id = "${aws_route_table.{{ $id }}_default_gateway.id}"
}

# sg:{{ $network.Name }}:{{ $id }}
resource "aws_security_group" "{{ $id }}_{{ $network.Name }}" {
  name = "{{ $id }}_{{ $network.Name }}"
  description = "Laforge - {{ $id }}_{{ $network.Name }} SG"
  vpc_id = "${aws_vpc.{{ $id }}_vpc.id}"

  ingress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    self = true
  }

  {{ if $network.VDIVisible }}
  ingress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    security_groups = [
      "${aws_security_group.{{ $id }}_vdi.id}"
    ]
  }
  {{ end }}

  tags {
    Name = "{{ $id }}_{{ $network.Name }}"
    Environment = "{{ $.Environment.Name }}"
    Team = "{{ $id }}"
  }
}

{{ range $hostname, $host := $network.ResolvedHosts }}

{{ $hostIP := CustomIP $network.CIDR 0 $host.LastOctet }}

resource "aws_eip" "{{ $id }}_{{ $network.Subdomain }}_{{ $hostname }}_eip" {
  vpc = true
}

resource "aws_eip_association" "{{ $id }}_{{ $network.Subdomain }}_{{ $hostname }}_eip_assoc" {
  instance_id   = "${aws_instance.{{ $id }}_{{ $network.Subdomain }}_{{ $hostname }}.id}"
  allocation_id = "${aws_eip.{{ $id }}_{{ $network.Subdomain }}_{{ $hostname }}_eip.id}"
}

# instance:{{ $id }}_{{ $network.Subdomain }}_{{ $hostname }}
resource "aws_instance" "{{ $id }}_{{ $network.Subdomain }}_{{ $hostname }}" {

  ami = "{{ $host.GetAMI }}"
  instance_type = "{{ $host.InstanceSize }}"
  key_name = "${aws_key_pair.ssh_{{ $.Environment.Name }}.key_name}"
  subnet_id = "${aws_subnet.{{ $id }}_{{ $network.Name }}.id}"
  ebs_optimized = true

  private_ip = "{{ $hostIP }}"

  vpc_security_group_ids = [
    "${aws_security_group.{{ $id }}_base.id}",
    "${aws_security_group.{{ $id }}_{{ $network.Name }}.id}",
    {{ range $_, $port := $host.ValidTCPPorts }}
      "${aws_security_group.{{ $id }}_public_sg_tcp_{{ $port }}.id}",
    {{ end }}
    {{ range $_, $port := $host.ValidUDPPorts }}
      "${aws_security_group.{{ $id }}_public_sg_udp_{{ $port }}.id}",
    {{ end }}
  ]

  tags {
    Name = "{{ $id }}_{{ $network.Subdomain }}_{{ $hostname }}"
    Hostname = "{{ $hostname }}"
    Environment = "{{ $.Environment.Name }}"
    Network = "{{ $network.Name }}"
    Team = "{{ $id }}"
  }

  {{ if eq $host.OS "w2k16" }}

    root_block_device {
      delete_on_termination = true
      volume_size = 30
    }

    {{ $scriptPath := ScriptRender "windows_uds.xml" $.Competition $.Environment $i $network $host $hostname }}

    {{ $pwScriptPath := ScriptRender "windows_pw.ps1" $.Competition $.Environment $i $network $host $hostname }}

    user_data = "${file("{{ $scriptPath }}")}"

    provisioner "file" {
      connection {
        type = "winrm"
        user = "Administrator"
        timeout = "60m"
        password = "LaForgeTempPassword!12345"
      }

      source = "{{ $pwScriptPath }}"
      destination = "C:/pw.ps1"
    }

    provisioner "remote-exec" {
      connection {
        type = "winrm"
        user = "Administrator"
        timeout = "60m"
        password = "LaForgeTempPassword!12345"
      }

      inline = [
        "powershell -NoProfile -ExecutionPolicy Bypass C:/pw.ps1",
        "del \"C:/pw.ps1\" || ver1>nul",
      ]
    }

    {{ $fileUploads := $host.UploadFiles }}
    {{ $fileUploadCount := len $fileUploads }}
    {{ if gt $fileUploadCount 0 }}
      {{ range $localFile, $remoteFile := $fileUploads }}
        provisioner "file" {
          connection {
            type     = "winrm"
            user     = "Administrator"
            timeout  = "60m"
            password = "{{ $.Competition.RootPassword }}"
          }

          source      = "{{ $localFile }}"
          destination = "{{ $remoteFile }}"
        }
      {{ end }}    
    {{ end }}


    {{ $scriptCount := len $host.Scripts }}
    {{ if gt $scriptCount 0 }}

      {{ range $_, $sname := $host.Scripts }}
        {{ $scriptPath := DScript $sname $.Competition $.Environment $i $network $host $hostname }}
        {{ if ne $scriptPath "SCRIPT_PARSING_ERROR" }}
          provisioner "file" {
            connection {
              type     = "winrm"
              user     = "Administrator"
              timeout  = "60m"
              password = "{{ $.Competition.RootPassword }}"
            }

            source      = "{{ $scriptPath }}"
            destination = "C:/laforge/{{ $sname }}"
          }

          provisioner "remote-exec" {
            connection {
              type     = "winrm"
              user     = "Administrator"
              timeout  = "60m"
              password = "{{ $.Competition.RootPassword }}"
            }

            inline = [
              "powershell -NoProfile -ExecutionPolicy Bypass C:/laforge/{{ $sname }}",
            ]
          }
        {{ end }}
      {{ end }}

      {{ if gt $scriptCount 0 }}
        provisioner "remote-exec" {
          connection {
            type     = "winrm"
            user     = "Administrator"
            timeout  = "60m"
            password = "{{ $.Competition.RootPassword }}"
          }

          inline = [       
            "rmdir /s /q \"C:/laforge\" || ver1>nul",
          ]
        }
      {{ end }}
    {{ end }}

    {{ if gt (len $host.OverridePassword) 0 }}
      provisioner "remote-exec" {
        connection {
          type     = "winrm"
          user     = "Administrator"
          timeout  = "60m"
          password = "{{ $.Competition.RootPassword }}"
        }
        
        inline = [       
          "net user Administrator {{ $host.OverridePassword }}",
        ]
      }
    {{ end }}
  {{ end }}

  {{ if eq $host.OS "w2k16sql" }}

    root_block_device {
      delete_on_termination = true
      volume_size = 30
    }

    {{ $scriptPath := ScriptRender "windows_uds.xml" $.Competition $.Environment $i $network $host $hostname }}

    {{ $pwScriptPath := ScriptRender "windows_pw.ps1" $.Competition $.Environment $i $network $host $hostname }}

    user_data = "${file("{{ $scriptPath }}")}"

    provisioner "file" {
      connection {
        type = "winrm"
        user = "Administrator"
        timeout = "60m"
        password = "LaForgeTempPassword!12345"
      }

      source = "{{ $pwScriptPath }}"
      destination = "C:/pw.ps1"
    }

    provisioner "remote-exec" {
      connection {
        type = "winrm"
        user = "Administrator"
        timeout = "60m"
        password = "LaForgeTempPassword!12345"
      }

      inline = [
        "powershell -NoProfile -ExecutionPolicy Bypass C:/pw.ps1",
        "del \"C:/pw.ps1\" || ver1>nul",
      ]
    }

    {{ $fileUploads := $host.UploadFiles }}
    {{ $fileUploadCount := len $fileUploads }}
    {{ if gt $fileUploadCount 0 }}
      {{ range $localFile, $remoteFile := $fileUploads }}
        provisioner "file" {
          connection {
            type     = "winrm"
            user     = "Administrator"
            timeout  = "60m"
            password = "{{ $.Competition.RootPassword }}"
          }

          source      = "{{ $localFile }}"
          destination = "{{ $remoteFile }}"
        }
      {{ end }}    
    {{ end }}


    {{ $scriptCount := len $host.Scripts }}
    {{ if gt $scriptCount 0 }}

      {{ range $_, $sname := $host.Scripts }}
        {{ $scriptPath := DScript $sname $.Competition $.Environment $i $network $host $hostname }}
        {{ if ne $scriptPath "SCRIPT_PARSING_ERROR" }}
          provisioner "file" {
            connection {
              type     = "winrm"
              user     = "Administrator"
              timeout  = "60m"
              password = "{{ $.Competition.RootPassword }}"
            }

            source      = "{{ $scriptPath }}"
            destination = "C:/laforge/{{ $sname }}"
          }

          provisioner "remote-exec" {
            connection {
              type     = "winrm"
              user     = "Administrator"
              timeout  = "60m"
              password = "{{ $.Competition.RootPassword }}"
            }

            inline = [
              "powershell -NoProfile -ExecutionPolicy Bypass C:/laforge/{{ $sname }}",
            ]
          }
        {{ end }}
      {{ end }}

      {{ if gt $scriptCount 0 }}
        provisioner "remote-exec" {
          connection {
            type     = "winrm"
            user     = "Administrator"
            timeout  = "60m"
            password = "{{ $.Competition.RootPassword }}"
          }
          
          inline = [       
            "rmdir /s /q \"C:/laforge\" || ver1>nul",
          ]
        }
      {{ end }}
    {{ end }}

    {{ if gt (len $host.OverridePassword) 0 }}
      provisioner "remote-exec" {
        connection {
          type     = "winrm"
          user     = "Administrator"
          timeout  = "60m"
          password = "{{ $.Competition.RootPassword }}"
        }
        
        inline = [       
          "net user Administrator {{ $host.OverridePassword }}",
        ]
      }
    {{ end }}
  {{ end }}

  {{ if eq $host.OS "w2k12" }}

    root_block_device {
      delete_on_termination = true
      volume_size = 30
    }

    {{ $scriptPath := ScriptRender "windows_uds.xml" $.Competition $.Environment $i $network $host $hostname }}

    {{ $pwScriptPath := ScriptRender "windows_pw.ps1" $.Competition $.Environment $i $network $host $hostname }}

    user_data = "${file("{{ $scriptPath }}")}"

    provisioner "file" {
      connection {
        type = "winrm"
        user = "Administrator"
        timeout = "60m"
        password = "LaForgeTempPassword!12345"
      }

      source = "{{ $pwScriptPath }}"
      destination = "C:/pw.ps1"
    }

    provisioner "remote-exec" {
      connection {
        type = "winrm"
        user = "Administrator"
        timeout = "60m"
        password = "LaForgeTempPassword!12345"
      }

      inline = [
        "powershell -NoProfile -ExecutionPolicy Bypass C:/pw.ps1",
        "del \"C:/pw.ps1\" || ver1>nul",
      ]
    }

    {{ $fileUploads := $host.UploadFiles }}
    {{ $fileUploadCount := len $fileUploads }}
    {{ if gt $fileUploadCount 0 }}
      {{ range $localFile, $remoteFile := $fileUploads }}
        provisioner "file" {
          connection {
            type     = "winrm"
            user     = "Administrator"
            timeout  = "60m"
            password = "{{ $.Competition.RootPassword }}"
          }

          source      = "{{ $localFile }}"
          destination = "{{ $remoteFile }}"
        }
      {{ end }}    
    {{ end }}


    {{ $scriptCount := len $host.Scripts }}
    {{ if gt $scriptCount 0 }}

      {{ range $_, $sname := $host.Scripts }}
        {{ $scriptPath := DScript $sname $.Competition $.Environment $i $network $host $hostname }}
        {{ if ne $scriptPath "SCRIPT_PARSING_ERROR" }}
          provisioner "file" {
            connection {
              type     = "winrm"
              user     = "Administrator"
              timeout  = "60m"
              password = "{{ $.Competition.RootPassword }}"
            }

            source      = "{{ $scriptPath }}"
            destination = "C:/laforge/{{ $sname }}"
          }

          provisioner "remote-exec" {
            connection {
              type     = "winrm"
              user     = "Administrator"
              timeout  = "60m"
              password = "{{ $.Competition.RootPassword }}"
            }

            inline = [
              "powershell -NoProfile -ExecutionPolicy Bypass C:/laforge/{{ $sname }}",
            ]
          }
        {{ end }}
      {{ end }}

      {{ if gt $scriptCount 0 }}
        provisioner "remote-exec" {
          connection {
            type     = "winrm"
            user     = "Administrator"
            timeout  = "60m"
            password = "{{ $.Competition.RootPassword }}"
          }
          
          inline = [       
            "rmdir /s /q \"C:/laforge\" || ver1>nul",
          ]
        }
      {{ end }}
    {{ end }}

    {{ if gt (len $host.OverridePassword) 0 }}
      provisioner "remote-exec" {
        connection {
          type     = "winrm"
          user     = "Administrator"
          timeout  = "60m"
          password = "{{ $.Competition.RootPassword }}"
        }
        
        inline = [       
          "net user Administrator {{ $host.OverridePassword }}",
        ]
      }
    {{ end }}
  {{ end }}

  {{ if eq $host.OS "ubuntu" }}

    root_block_device {
      delete_on_termination = true
      volume_size = 15
    }

    {{ $scriptPath := ScriptRender "ubuntu_uds.sh" $.Competition $.Environment $i $network $host $hostname }}

    user_data = "${file("{{ $scriptPath }}")}"

    provisioner "remote-exec" {
      connection {
        type     = "ssh"
        user     = "ubuntu"
        timeout  = "60m"
        private_key = "${file("{{ $.Competition.SSHPrivateKeyPath }}")}"
      }

      inline = [
        "sudo sed -i 's/^.*ssh-/ssh-/;' /root/.ssh/authorized_keys",
      ]
    }

    {{ $fileUploads := $host.UploadFiles }}
    {{ $fileUploadCount := len $fileUploads }}
    {{ if gt $fileUploadCount 0 }}
      {{ range $localFile, $remoteFile := $fileUploads }}
        provisioner "file" {
          connection {
            type     = "ssh"
            user     = "root"
            timeout  = "60m"
            private_key = "${file("{{ $.Competition.SSHPrivateKeyPath }}")}"
          }

          source      = "{{ $localFile }}"
          destination = "{{ $remoteFile }}"
        }
      {{ end }}    
    {{ end }}

    {{ $scriptCount := len $host.Scripts }}
    {{ if gt $scriptCount 0 }}

      {{ range $_, $sname := $host.Scripts }}
        {{ $scriptPath := DScript $sname $.Competition $.Environment $i $network $host $hostname }}
        {{ if ne $scriptPath "SCRIPT_PARSING_ERROR" }}
          provisioner "file" {
            connection {
              type     = "ssh"
              user     = "root"
              timeout  = "60m"
              private_key = "${file("{{ $.Competition.SSHPrivateKeyPath }}")}"
            }
            source      = "{{ $scriptPath }}"
            destination = "/tmp/{{ $sname }}"
          }

          provisioner "remote-exec" {
            connection {
              type     = "ssh"
              user     = "root"
              timeout  = "60m"
              private_key = "${file("{{ $.Competition.SSHPrivateKeyPath }}")}"
            }

            inline = [
              "chmod +x /tmp/{{ $sname }}",
              "/tmp/{{ $sname }}",
              "rm -f /tmp/{{ $sname }}",
            ]
          }
        {{ end }}
      {{ end }}      
    {{ end }}
  {{ end }}

  {{ if eq $host.OS "centos" }}
    {{ $scriptPath := ScriptRender "centos_uds.sh" $.Competition $.Environment $i $network $host $hostname }}

    user_data = "${file("{{ $scriptPath }}")}"

    connection {
      type     = "ssh"
      user     = "root"
      timeout  = "60m"
      private_key = "${file("{{ $.Competition.SSHPrivateKeyPath }}")}"
    }

    {{ $fileUploads := $host.UploadFiles }}
    {{ $fileUploadCount := len $fileUploads }}
    {{ if gt $fileUploadCount 0 }}
      {{ range $localFile, $remoteFile := $fileUploads }}
        provisioner "file" {
          source      = "{{ $localFile }}"
          destination = "{{ $remoteFile }}"
        }
      {{ end }}    
    {{ end }}

    {{ $scriptCount := len $host.Scripts }}
    {{ if gt $scriptCount 0 }}      

      {{ range $_, $sname := $host.Scripts }}
        {{ $scriptPath := DScript $sname $.Competition $.Environment $i $network $host $hostname }}
        {{ if ne $scriptPath "SCRIPT_PARSING_ERROR" }}
          provisioner "file" {
            source      = "{{ $scriptPath }}"
            destination = "/tmp/{{ $sname }}"
          }

          provisioner "remote-exec" {
            inline = [
              "chmod +x /tmp/{{ $sname }}",
              "/tmp/{{ $sname }}",
              "rm -f /tmp/{{ $sname }}",
            ]
          }
        {{ end }}
      {{ end }}
    {{ end }}
  {{ end }}

  {{ if ne $.Environment.GenesisHost.Hostname "" }}
    {{ if ne $hostname $.Environment.GenesisHost.Hostname }}
      {{ $depLen := len $host.Dependencies }}
      {{ if gt $depLen 0 }}

        depends_on = [
          "aws_instance.{{ $id }}_{{ $.Environment.GenesisHost.Network }}_{{ $.Environment.GenesisHost.Hostname }}",
          {{ range $_, $dependency := $host.Dependencies }}
            "aws_instance.{{ $id }}_{{ $dependency.Network }}_{{ $dependency.Host }}"
          {{ end }}
        ]

      {{ end }}    
    {{ end }}
  {{ else }}
    {{ $depLen := len $host.Dependencies }}
    {{ if gt $depLen 0 }}

      depends_on = [
        {{ range $_, $dependency := $host.Dependencies }}
          "aws_instance.{{ $id }}_{{ $dependency.Network }}_{{ $dependency.Host }}"
        {{ end }}
      ]

    {{ end }}
  {{ end }}    
}

{{ $fullHostname := printf "%s-%s" $hostname $id }}

output "public_ips.{{ $fullHostname }}" {
  value = "${aws_instance.{{ $id }}_{{ $network.Subdomain }}_{{ $hostname }}.public_ip}"
}

{{ $fqdn := printf "%s-%s.%s.%s" $hostname $id $network.Subdomain $.Environment.Domain }}

resource "aws_route53_record" "{{ $id }}_{{ $network.Subdomain }}_a_{{ $hostname }}" {
  zone_id = "${aws_route53_zone.{{ $id }}_r53.zone_id}"
  name    = "{{ $fqdn }}"
  type    = "A"
  ttl     = "60"
  records = [
    "{{ $hostIP }}"
  ]
}

{{ range $dnsIdx, $dnsEntry := $host.RenderedDNSEntries $i }}

resource "aws_route53_record" "{{ $id }}_dns_record_{{ $dnsIdx }}" {
  zone_id = "${aws_route53_zone.{{ $id }}_r53.zone_id}"
  name    = "{{ $dnsEntry.Name }}"
  type    = "{{ $dnsEntry.Type }}"
  ttl     = "60"
  records = [
    "{{ $dnsEntry.Value }}"
  ]
}

{{ end }}

{{ range $_, $cname := $host.InternalCNAMEs }}

{{ $recordValue := CustomInternalCNAME $.Environment $network $cname }}

resource "aws_route53_record" "{{ $id }}_{{ $network.Subdomain }}_icname_{{ $cname }}" {
  zone_id = "${aws_route53_zone.{{ $id }}_r53.zone_id}"
  name    = "{{ $recordValue }}"
  type    = "CNAME"
  ttl     = "60"
  records = [
    "{{ $fqdn }}"
  ]
}

{{ end }} {{/* End ExternalCNAME Iterator */}}

{{ range $_, $cname := $host.ExternalCNAMEs }}

{{ $recordValue := CustomExternalCNAME $.Environment $cname }}

resource "aws_route53_record" "{{ $id }}_{{ $network.Subdomain }}_ecname_{{ $cname }}" {
  zone_id = "${aws_route53_zone.{{ $id }}_r53.zone_id}"
  name    = "{{ $recordValue }}"
  type    = "CNAME"
  ttl     = "60"
  records = [
    "{{ $fqdn }}"
  ]
}

{{ end }} {{/* End InternalCNAME Iterator */}}

{{ end }} {{/* End Host Iterator */}}
{{ end }} {{/* End Network Iterator */}}
{{ end }} {{/* End Pod Iterator */}}
